@@ -86,3 +86,11 @@ sub abbrev {
 }
 
 1;
+
+=head1 LICENSE
+
+This program is free software;
+you can redistribute it and/or modify it under the same terms as Perl itself.
+
+=cut
+
